updated route naming
