# routes/account/login.js
@@ -15,7 +15,7 @@ let schema = {
 };
 
 // Apply the user login route
-router.post("/user/login", (req, res, next) => {
+router.post("/account/login", (req, res, next) => {
 	let result = v.validate(req.body, schema);
 	if (!result.valid) {
 		return res.status(401).json("Invalid input.");
