# swagger.yaml
@@ -3,7 +3,7 @@ info:
     version: "1.0.0"
     title: "Kessoku API"
 paths:
-    /user/login:
+    /account/login:
         post:
             tags:
                 - "Authentication"
@@ -43,7 +43,7 @@ paths:
                     description: "Invalid input or Invalid credentials"
                 "500":
                     description: "Internal server error"
-    /user/register:
+    /account/register:
         post:
             tags:
                 - "Authentication"
@@ -97,7 +97,7 @@ paths:
                     description: "Username already taken"
                 "500":
                     description: "Internal server error"
-    /user/logout:
+    /account/logout:
         get:
             tags:
                 - "Authentication"
@@ -110,7 +110,7 @@ paths:
                     description: "Successfully logged out"
                 "500":
                     description: "Internal server error"
-    /user/verify:
+    /account/verify:
         post:
             tags:
                 - "Authentication"
@@ -137,7 +137,7 @@ paths:
                     description: "Conflict, user is already verified"
                 "500":
                     description: "Internal server error"
-    /user/verify/{token}:
+    /account/verify/{token}:
         get:
             tags:
                 - "Authentication"
